Bug 221589 - error to scan image
Summary: error to scan image
Status: RESOLVED FIXED
Alias: None
Product: libksane
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Kåre Särs
URL:
Keywords:
: 228918 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-01-07 00:12 UTC by Raúl A V
Modified: 2010-03-01 08:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Raúl A V 2010-01-07 00:12:21 UTC
Application that crashed: scangui
Version of the application: 1.0.0
KDE Version: 4.3.4 (KDE 4.3.4)
Qt Version: 4.5.2
Operating System: Linux 2.6.31-16-generic x86_64
Distribution: Ubuntu 9.10

What I was doing when the application crashed:
error to scan image

 -- Backtrace:
Application: Acquire images (scangui), signal: Segmentation fault
[Current thread is 1 (Thread 0x7f6efd156750 (LWP 31981))]

Thread 2 (Thread 0x7f6edee1a910 (LWP 31983)):
#0  0x00007f6ef906b373 in *__GI___poll (fds=<value optimized out>, nfds=<value optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007f6edf0344da in ?? () from /usr/lib/libavahi-common.so.3
#2  0x00007f6edf03302e in avahi_simple_poll_run () from /usr/lib/libavahi-common.so.3
#3  0x00007f6edf0337ad in avahi_simple_poll_iterate () from /usr/lib/libavahi-common.so.3
#4  0x00007f6edf0337dd in avahi_simple_poll_loop () from /usr/lib/libavahi-common.so.3
#5  0x00007f6edf03432c in ?? () from /usr/lib/libavahi-common.so.3
#6  0x00007f6ef6e8ba04 in start_thread (arg=<value optimized out>) at pthread_create.c:300
#7  0x00007f6ef90777bd in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7f6efd156750 (LWP 31981)):
[KCrash Handler]
#5  0x00007f6efc67b94b in ?? () from /usr/lib/libksane.so.0
#6  0x00007f6efc67bd64 in ?? () from /usr/lib/libksane.so.0
#7  0x00007f6ef9c0bddc in QMetaObject::activate (sender=0x24fb540, from_signal_index=<value optimized out>, to_signal_index=<value optimized out>, argv=0xffffffffffff79b0) at kernel/qobject.cpp:3113
#8  0x00007f6efad8d8e7 in QAbstractButton::clicked (this=0x0, _t1=false) at .moc/release-shared/moc_qabstractbutton.cpp:200
#9  0x00007f6efaaef41b in QAbstractButtonPrivate::emitClicked (this=0x24fb5f0) at widgets/qabstractbutton.cpp:543
#10 0x00007f6efaaf102b in QAbstractButtonPrivate::click (this=0x24fb5f0) at widgets/qabstractbutton.cpp:536
#11 0x00007f6efaaf1275 in QAbstractButton::mouseReleaseEvent (this=0x24fb540, e=0x7fff9320edd0) at widgets/qabstractbutton.cpp:1115
#12 0x00007f6efa7da9c0 in QWidget::event (this=0x24fb540, event=0x7fff9320edd0) at kernel/qwidget.cpp:7549
#13 0x00007f6efa78befc in QApplicationPrivate::notify_helper (this=0x235e0f0, receiver=0x24fb540, e=0x7fff9320edd0) at kernel/qapplication.cpp:4056
#14 0x00007f6efa793011 in QApplication::notify (this=<value optimized out>, receiver=0x24fb540, e=0x7fff9320edd0) at kernel/qapplication.cpp:3758
#15 0x00007f6efb61ae56 in KApplication::notify (this=0x7fff93210c80, receiver=0x24fb540, event=0x7fff9320edd0) at ../../kdeui/kernel/kapplication.cpp:302
#16 0x00007f6ef9bf6c2c in QCoreApplication::notifyInternal (this=0x7fff93210c80, receiver=0x24fb540, event=0x7fff9320edd0) at kernel/qcoreapplication.cpp:610
#17 0x00007f6efa7928e0 in QCoreApplication::sendSpontaneousEvent (receiver=0x24fb540, event=0x7fff9320edd0, alienWidget=0x24fb540, nativeWidget=0x23e5b60, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#18 QApplicationPrivate::sendMouseEvent (receiver=0x24fb540, event=0x7fff9320edd0, alienWidget=0x24fb540, nativeWidget=0x23e5b60, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#19 0x00007f6efa7f8a0e in QETWidget::translateMouseEvent (this=0x23e5b60, event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#20 0x00007f6efa7f7aa9 in QApplication::x11ProcessEvent (this=<value optimized out>, event=0x7fff93210900) at kernel/qapplication_x11.cpp:3550
#21 0x00007f6efa820d0c in x11EventSourceDispatch (s=<value optimized out>, callback=<value optimized out>, user_data=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:146
#22 0x00007f6ef5ad9bce in g_main_dispatch (context=0x2360d20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:1960
#23 IA__g_main_context_dispatch (context=0x2360d20) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2513
#24 0x00007f6ef5add598 in g_main_context_iterate (context=0x2360d20, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>)
    at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2591
#25 0x00007f6ef5add6c0 in IA__g_main_context_iteration (context=0x2360d20, may_block=1) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2654
#26 0x00007f6ef9c1f1a6 in QEventDispatcherGlib::processEvents (this=0x2342560, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#27 0x00007f6efa8204be in QGuiEventDispatcherGlib::processEvents (this=0x0, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#28 0x00007f6ef9bf5532 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#29 0x00007f6ef9bf5904 in QEventLoop::exec (this=0x7fff93210c30, flags=) at kernel/qeventloop.cpp:201
#30 0x00007f6ef9bf7ab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#31 0x0000000000406dd7 in _start ()

Reported using DrKonqi
Comment 1 Kåre Särs 2010-01-07 13:35:08 UTC
I need more info

Can you get it to crash with the kdegraphics-dbg package installed? (better back-trace)

What scanner/backend do you have?
Comment 2 Raúl A V 2010-01-07 15:21:53 UTC
On Jueves, 7 de Enero de 2010 13:35:09 Kåre Särs escribió:
> https://bugs.kde.org/show_bug.cgi?id=221589
> 
> 
> Kåre Särs <kare.sars@iki.fi> changed:
> 
>            What    |Removed                     |Added
> ---------------------------------------------------------------------------
> - Status|UNCONFIRMED                 |NEEDSINFO
>          Resolution|                            |WAITINGFORINFO
> 
> 
> 
> 
> --- Comment #1 from Kåre Särs <kare sars iki fi>  2010-01-07 13:35:08 ---
> I need more info
> 
> Can you get it to crash with the kdegraphics-dbg package installed? (better
> back-trace)
> 
> What scanner/backend do you have?
> 
hi, here, the new back trace, thanks

Application: Acquire images (scangui), signal: Segmentation fault
[Current thread is 1 (Thread 0x7fdad1080750 (LWP 25292))]

Thread 2 (Thread 0x7fdab2f6b910 (LWP 25294)):
#0  0x00007fdaccf95373 in *__GI___poll (fds=<value optimized out>, nfds=<value 
optimized out>, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:87
#1  0x00007fdab31854da in ?? () from /usr/lib/libavahi-common.so.3
#2  0x00007fdab318402e in avahi_simple_poll_run () from /usr/lib/libavahi-
common.so.3
#3  0x00007fdab31847ad in avahi_simple_poll_iterate () from /usr/lib/libavahi-
common.so.3
#4  0x00007fdab31847dd in avahi_simple_poll_loop () from /usr/lib/libavahi-
common.so.3
#5  0x00007fdab318532c in ?? () from /usr/lib/libavahi-common.so.3
#6  0x00007fdacadb5a04 in start_thread (arg=<value optimized out>) at 
pthread_create.c:300
#7  0x00007fdaccfa17bd in clone () at 
../sysdeps/unix/sysv/linux/x86_64/clone.S:112
#8  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fdad1080750 (LWP 25292)):
[KCrash Handler]
#5  0x00007fdad05a594b in KSaneIface::KSaneWidgetPrivate::scanPreview 
(this=0x1969bc0) at 
../../../../libs/libksane/libksane/ksane_widget_private.cpp:625
#6  0x00007fdad05a5d64 in KSaneIface::KSaneWidgetPrivate::qt_metacall 
(this=0x1969bc0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, 
_a=0x7fff71910e10)
    at ./ksane_widget_private.moc:100
#7  0x00007fdacdb35ddc in QMetaObject::activate (sender=0x18e5000, 
from_signal_index=<value optimized out>, to_signal_index=<value optimized 
out>, argv=0xffffffffffff79b0) at kernel/qobject.cpp:3113
#8  0x00007fdacecb78e7 in QAbstractButton::clicked (this=0x0, _t1=false) at 
.moc/release-shared/moc_qabstractbutton.cpp:200
#9  0x00007fdacea1941b in QAbstractButtonPrivate::emitClicked (this=0x18e50b0) 
at widgets/qabstractbutton.cpp:543
#10 0x00007fdacea1b02b in QAbstractButtonPrivate::click (this=0x18e50b0) at 
widgets/qabstractbutton.cpp:536
#11 0x00007fdacea1b275 in QAbstractButton::mouseReleaseEvent (this=0x18e5000, 
e=0x7fff71911530) at widgets/qabstractbutton.cpp:1115
#12 0x00007fdace7049c0 in QWidget::event (this=0x18e5000, event=0x7fff71911530) 
at kernel/qwidget.cpp:7549
#13 0x00007fdace6b5efc in QApplicationPrivate::notify_helper (this=0x183d0f0, 
receiver=0x18e5000, e=0x7fff71911530) at kernel/qapplication.cpp:4056
#14 0x00007fdace6bd011 in QApplication::notify (this=<value optimized out>, 
receiver=0x18e5000, e=0x7fff71911530) at kernel/qapplication.cpp:3758
#15 0x00007fdacf544e56 in KApplication::notify (this=0x7fff719133e0, 
receiver=0x18e5000, event=0x7fff71911530) at 
../../kdeui/kernel/kapplication.cpp:302
#16 0x00007fdacdb20c2c in QCoreApplication::notifyInternal 
(this=0x7fff719133e0, receiver=0x18e5000, event=0x7fff71911530) at 
kernel/qcoreapplication.cpp:610
#17 0x00007fdace6bc8e0 in QCoreApplication::sendSpontaneousEvent 
(receiver=0x18e5000, event=0x7fff71911530, alienWidget=0x18e5000, 
nativeWidget=0x18d4c70, buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at 
../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:216
#18 QApplicationPrivate::sendMouseEvent (receiver=0x18e5000, 
event=0x7fff71911530, alienWidget=0x18e5000, nativeWidget=0x18d4c70, 
buttonDown=<value optimized out>, 
    lastMouseReceiver=<value optimized out>) at kernel/qapplication.cpp:2924
#19 0x00007fdace722a0e in QETWidget::translateMouseEvent (this=0x18d4c70, 
event=<value optimized out>) at kernel/qapplication_x11.cpp:4409
#20 0x00007fdace721aa9 in QApplication::x11ProcessEvent (this=<value optimized 
out>, event=0x7fff71913060) at kernel/qapplication_x11.cpp:3550
#21 0x00007fdace74ad0c in x11EventSourceDispatch (s=<value optimized out>, 
callback=<value optimized out>, user_data=<value optimized out>) at 
kernel/qguieventdispatcher_glib.cpp:146
#22 0x00007fdac9a03bce in g_main_dispatch (context=0x183fd20) at 
/build/buildd/glib2.0-2.22.3/glib/gmain.c:1960
#23 IA__g_main_context_dispatch (context=0x183fd20) at 
/build/buildd/glib2.0-2.22.3/glib/gmain.c:2513
#24 0x00007fdac9a07598 in g_main_context_iterate (context=0x183fd20, 
block=<value optimized out>, dispatch=<value optimized out>, self=<value 
optimized out>)
    at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2591
#25 0x00007fdac9a076c0 in IA__g_main_context_iteration (context=0x183fd20, 
may_block=1) at /build/buildd/glib2.0-2.22.3/glib/gmain.c:2654
#26 0x00007fdacdb491a6 in QEventDispatcherGlib::processEvents (this=0x1821560, 
flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:327
#27 0x00007fdace74a4be in QGuiEventDispatcherGlib::processEvents (this=0x0, 
flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#28 0x00007fdacdb1f532 in QEventLoop::processEvents (this=<value optimized 
out>, flags=) at kernel/qeventloop.cpp:149
#29 0x00007fdacdb1f904 in QEventLoop::exec (this=0x7fff71913390, flags=) at 
kernel/qeventloop.cpp:201
#30 0x00007fdacdb21ab9 in QCoreApplication::exec () at 
kernel/qcoreapplication.cpp:888
#31 0x0000000000406dd7 in _start ()
Comment 3 Kåre Särs 2010-01-07 15:43:54 UTC
Thanks,

I now know what the problem is.

The problem does not exist in trunk or the 4.4 branch.
Comment 4 Kåre Särs 2010-01-07 20:34:36 UTC
SVN commit 1071266 by sars:

Fix crash on unchecked pointer. 

BUG:221589

 M  +23 -23    ksane_widget_private.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1071266
Comment 5 Kåre Särs 2010-01-07 20:36:53 UTC
Just curious. What scanner/backend do you have that does not have a resolution option?
Comment 6 Kåre Särs 2010-03-01 08:08:38 UTC
*** Bug 228918 has been marked as a duplicate of this bug. ***