Fix crash on unchecked pointer.

BUG:221589

svn path=/branches/KDE/4.3/kdegraphics/libs/libksane/; revision=1071266